<resources>
    <string name="app_name">BachelorApp</string>
    <string name="re">RE</string>
    <string name="ail">ALE</string>
    <string name="e_mail">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up!</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="email">E-mail</string>
    <string name="i_m_an_admin">I\'m an admin?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="i_m_not_an_admin">I\'m not an admin?</string>
    <string name="add_a_new_product">Add a new product</string>
    <string name="book_id">Book id...</string>
    <string name="book_title">Book title...</string>
    <string name="book_author">Book author...</string>
    <string name="book_price">Book price...</string>
    <string name="book_general_rating">Book general rating...</string>
    <string name="book_description">Book description...</string>
    <string name="add_book">Add book</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">username</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="product_name">Product name</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile">Change profile information</string>
    <string name="profile_image">Profile image</string>
    <string name="choose_a_category_of_books">Choose a category of books</string>
    <string name="recommendations">Recommendations</string>
    <string name="discounts">Discounts</string>
    <string name="book_category">Book category...</string>
    <string name="all_books">All books</string>
    <string name="bestsellers">Bestsellers</string>
    <string name="lei">lei</string>
    <string name="by">by</string>
    <string name="description">Description</string>
    <string name="total_price">Total price</string>
    <string name="next">Next</string>
    <string name="quantity">Quantity x </string>
    <string name="confirm_your_shipment_details_please">Confirm your shipment details please</string>
    <string name="phone_number">Phone number</string>
    <string name="shipment_address">Shipment address (street, apartment/house details, city)</string>
    <string name="confirm">Confirm</string>
    <string name="manage_orders">Manage orders</string>
    <string name="manage_order">Manage order</string>
    <string name="date_time">Date, Time</string>
    <string name="show_products">Show Products</string>
    <string name="username_order_datetime">Username order dateTime</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="product_maintenance">Product Maintenance</string>
    <string name="apply_changes">Apply changes</string>
    <string name="delete_book">Delete book</string>
    <string name="set_security_questions">Set security questions</string>
    <string name="answer_the_following_security_questions">Answer the following security questions</string>
    <string name="please_write_your_username">Please write your username</string>
    <string name="reset_password">Reset password</string>
    <string name="which_is_your_favourite_city">Which is your favourite city?</string>
    <string name="which_is_your_favourite_book">Which is your favourite book?</string>
    <string name="check_questions">Check questions</string>
    <string name="choose_your_favourite_book_genres">Choose your favourite book genres</string>
    <string name="adventure">Adventure</string>
    <string name="development">Development</string>
    <string name="children">Children</string>
    <string name="romance">Romance</string>
    <string name="drama">Drama</string>
    <string name="comedy">Comedy</string>
    <string name="fantasy">Fantasy</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="crime">Crime</string>
    <string name="thriller">Thriller</string>
    <string name="mystery">Mystery</string>
    <string name="western">Western</string>
    <string name="biography">Biography</string>
    <string name="action">Action</string>
    <string name="send_answers">Send answers</string>
    <string name="customer_purchases_report">Customer purchases report</string>
    <string name="display_users_genre_preferences">Display users\' genre preferences</string>
    <string name="toggle_values">Toggle Values</string>
    <string name="book_genres">Book genres...</string>
    <string-array name="spinner">
        <item>Bestsellers</item>
        <item>Discounted</item>
        <item>All Books</item>
    </string-array>


</resources>