<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark">


        <TextView
            android:id="@+id/tvUsernameOrder"
            android:layout_width="160dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:text="@string/full_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPhoneOrder"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="220dp"/>

        <TextView
            android:id="@+id/tvAddressOrder"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUsernameOrder"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/shipment_address"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPhoneOrder"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="15dp"
            android:text="@string/date_time"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/tvPriceOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:text="@string/book_price"
            android:textColor="@color/white"

            android:textSize="20sp"
            android:layout_below="@id/tvAddressOrder"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/btnShowProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPriceOrder"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:background="@drawable/log_btn"
            android:text="@string/show_products"
            />
    </RelativeLayout>

</RelativeLayout>