<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/layoutResetPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/imgReturnSettingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/back_button"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/etFindUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/log_btn"
        android:padding="14dp"
        android:layout_below="@id/layoutResetPassword"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/please_write_your_username"/>

    <TextView
        android:id="@+id/tvSecurityQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_the_following_security_questions"
        android:layout_below="@id/etFindUsername"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etQuestion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSecurityQuestions"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/log_btn"
        android:hint="@string/which_is_your_favourite_city"
        android:padding="14dp"
        android:textCursorDrawable="@drawable/color_cursor" />

    <EditText
        android:id="@+id/etQuestion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/log_btn"
        android:textCursorDrawable="@drawable/color_cursor"
        android:padding="14dp"
        android:layout_below="@id/etQuestion1"
        android:layout_margin="15dp"
        android:hint="@string/which_is_your_favourite_book"/>

    <Button
        android:id="@+id/btnCheckOQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etQuestion2"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:hint="@string/which_is_your_favourite_book"
        android:padding="14dp"
        android:text="@string/check_questions"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>