<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/tvBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView

            android:id="@+id/tvBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:layout_below="@id/tvBookTitle"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/imgBook"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tvBookAuthor"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"/>

        <TextView

            android:id="@+id/tvBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_below="@id/imgBook"
            android:textSize="18sp"
            />

        <TextView

            android:id="@+id/tvBookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:layout_below="@id/tvBookPrice"
            android:textSize="16sp"
            />

    </RelativeLayout>



</androidx.cardview.widget.CardView>