<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="341dp"
        android:layout_height="397dp"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="215dp"
        app:srcCompat="@drawable/shelf" />

    <TextView
        android:id="@+id/textView"

        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="315dp"

        android:textColor="#282622"
        android:textSize="60sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/re" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="205dp"

        android:textColor="#282622"
        android:textSize="60sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/ail" />

    <Button
        android:id="@+id/main_log"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/log_btn"
        android:layout_below="@id/textView"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:textColorHighlight="@color/colorAccent"

        android:textSize="18sp"
        android:shadowColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in" />

</RelativeLayout>